--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 body {
 	font-family: 'Handlee', cursive;
 	font-size: 13pt;
-	background-color: #c2d1f2;;
+	background-color: #c2d1f2;
 	padding: 10px;
 	margin: 0;
 }
